--- a/downloads.html
+++ b/downloads.html
@@ -153,6 +153,24 @@
                 ⬇️ Download PDF
               </a>
             </li>
+
+            <!-- উ লেখা শিখি -->
+            <li class="worksheet-item">
+              <div class="worksheet-label">
+                <span class="letter-bn">উ</span>
+                <span class="letter-en">(U)</span>
+                <span class="badge">Trace &amp; Write</span>
+              </div>
+              <a
+                class="btn btn-secondary"
+                href="learn_writing/Bangla_vowels/উ লেখা শিখি.pdf"
+                target="_blank"
+                rel="noopener noreferrer"
+                data-worksheet="swaraborno_উ"
+              >
+                ⬇️ Download PDF
+              </a>
+            </li>
           </ul>
         </article>
 
