--- a/downloads.html
+++ b/downloads.html
@@ -171,6 +171,24 @@
                 ⬇️ Download PDF
               </a>
             </li>
+
+            <!-- ঊ লেখা শিখি -->
+            <li class="worksheet-item">
+              <div class="worksheet-label">
+                <span class="letter-bn">ঊ</span>
+                <span class="letter-en">(Uu)</span>
+                <span class="badge">Trace &amp; Write</span>
+              </div>
+              <a
+                class="btn btn-secondary"
+                href="learn_writing/Bangla_vowels/ঊ লেখা শিখি.pdf"
+                target="_blank"
+                rel="noopener noreferrer"
+                data-worksheet="swaraborno_ঊ"
+              >
+                ⬇️ Download PDF
+              </a>
+            </li>
           </ul>
         </article>
 
