--- a/downloads.html
+++ b/downloads.html
@@ -207,6 +207,24 @@
                 ⬇️ Download PDF
               </a>
             </li>
+
+            <!-- এ লেখা শিখি -->
+            <li class="worksheet-item">
+              <div class="worksheet-label">
+                <span class="letter-bn">এ</span>
+                <span class="letter-en">(E)</span>
+                <span class="badge">Trace &amp; Write</span>
+              </div>
+              <a
+                class="btn btn-secondary"
+                href="learn_writing/Bangla_vowels/এ লেখা শিখি.pdf"
+                target="_blank"
+                rel="noopener noreferrer"
+                data-worksheet="swaraborno_এ"
+              >
+                ⬇️ Download PDF
+              </a>
+            </li>
           </ul>
         </article>
 
