--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <section class="section">
         <h2 class="section-title">What’s available right now?</h2>
         <ul class="bullet-list">
-          <li>✏️ স্বরবর্ণ worksheets: <strong>অ লেখা শিখি</strong>, <strong>আ লেখা শিখি</strong>, <strong>ই লেখা শিখি</strong>, <strong>ঈ লেখা শিখি</strong>, <strong>উ লেখা শিখি</strong>, <strong>ঊ লেখা শিখি</strong> &amp; <strong>ঋ লেখা শিখি</strong></li>
+          <li>✏️ স্বরবর্ণ worksheets: <strong>অ লেখা শিখি</strong>, <strong>আ লেখা শিখি</strong>, <strong>ই লেখা শিখি</strong>, <strong>ঈ লেখা শিখি</strong>, <strong>উ লেখা শিখি</strong>, <strong>ঊ লেখা শিখি</strong>, <strong>ঋ লেখা শিখি</strong> &amp; <strong>এ লেখা শিখি</strong></li>
           <li>📥 All worksheets in one place: <a href="downloads.html">Downloads page</a></li>
           <li>⏳ More vowels, consonants &amp; practice packs are coming soon</li>
         </ul>
